--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.1.6",
+    "framer-motion": "^11.3.0",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.400.0",
     "mapbox-gl": "^3.5.1",
