--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.1",
+    "react-map-gl": "^7.1.7",
     "react-router-dom": "^6.24.1",
     "react-web-share": "^2.0.2",
     "tailwind-merge": "^2.3.0",
