--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "embla-carousel-react": "^8.1.6",
     "framer-motion": "^11.3.0",
     "input-otp": "^1.2.4",
+    "js-sha1": "^0.7.0",
     "lucide-react": "^0.400.0",
     "mapbox-gl": "^3.5.1",
     "react": "^18.2.0",
