--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-router-dom": "^6.24.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "use-sound": "^4.0.3",
     "zod": "^3.23.8",
     "zustand": "^4.5.4"
   },
