--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-map-gl": "^7.1.7",
     "react-router-dom": "^6.24.1",
     "react-web-share": "^2.0.2",
+    "recharts": "^2.12.7",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "use-sound": "^4.0.3",
