--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
 VITE_BACKEND_URL = http://localhost:300/api
 VTTE_CLOUDINARY_URL= cloudinary://<your_api_key>:<your_api_secret>@product_env
 VITE_MAPBOX_TOKEN= <mapbox_api_key>
+
+VITE_CLOUDINARY_PUBLIC = <cloudinary_public>
+VITE_CLOUDINARY_APIKEY = <cloudinary_apikey>
+VITE_CLOUDINARY_SECRETKEY = <clodinary_secretkey>
